--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,56 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
     <top.defaults.colorpicker.ColorPickerView
         android:id="@+id/colorPicker"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         app:enableAlpha="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/pickedColor"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginLeft="32dp"
         android:layout_marginStart="32dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/colorPicker"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <top.defaults.view.TextButton
+    <Button
         android:id="@+id/colorHex"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:textSize="16sp"
-        app:underline="true"
+        app:layout_constraintBottom_toTopOf="@+id/pickedColor"
         app:layout_constraintLeft_toLeftOf="@+id/pickedColor"
         app:layout_constraintRight_toRightOf="@+id/pickedColor"
-        app:layout_constraintBottom_toTopOf="@+id/pickedColor"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <top.defaults.view.TextButton
+    <Button
         android:id="@+id/resetColor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:text="reset"
-        android:textSize="16sp"
         android:textColor="@color/colorAccent"
-        app:backgroundEffect="ripple"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@+id/pickedColor"
         app:layout_constraintRight_toRightOf="@+id/pickedColor"
-        app:layout_constraintTop_toBottomOf="@+id/pickedColor"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/pickedColor" />
 
 </android.support.constraint.ConstraintLayout>
