--- a/colorpicker/src/main/res/layout/top_defaults_view_color_picker_popup.xml
+++ b/colorpicker/src/main/res/layout/top_defaults_view_color_picker_popup.xml
@@ -15,33 +15,36 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <Button
         android:id="@+id/cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
+        android:backgroundTint="#9FA8DA"
         android:gravity="center"
-        android:minWidth="64dp"
+        android:minWidth="80dp"
         android:padding="8dp"
-        android:textColor="@android:color/black"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/colorPickerView"
         tools:text="Cancel" />
 
-    <TextView
+    <Button
         android:id="@+id/ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:background="?android:selectableItemBackground"
+        android:backgroundTint="#2196F3"
         android:gravity="center"
-        android:minWidth="64dp"
+        android:minWidth="80dp"
         android:padding="8dp"
-        android:textColor="@android:color/black"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@id/cancel"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,28 +53,26 @@
 
     <View
         android:id="@+id/colorIndicator"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
         android:background="@android:color/holo_red_dark"
         app:layout_constraintBottom_toBottomOf="@id/cancel"
-        app:layout_constraintEnd_toStartOf="@id/colorHex"
-        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/cancel" />
+        app:layout_constraintTop_toBottomOf="@id/colorPickerView" />
 
     <TextView
         android:id="@+id/colorHex"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginTop="4dp"
         android:gravity="center_horizontal"
         android:textColor="@android:color/black"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@id/colorIndicator"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/colorIndicator"
-        app:layout_constraintTop_toTopOf="@id/colorIndicator"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/colorIndicator"
+        app:layout_constraintStart_toStartOf="@id/colorIndicator"
+        app:layout_constraintTop_toBottomOf="@id/colorIndicator"
         tools:text="0xFFFFFFFF" />
 
 </android.support.constraint.ConstraintLayout>
